mudança simples text botão

--- a/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:hint="@string/button_send"
         android:onClick="sendMessage"
+        android:text="@string/button_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
