--- a/ListaFilme/app/src/main/res/layout/adapter_lista.xml
+++ b/ListaFilme/app/src/main/res/layout/adapter_lista.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/textTitulo"
-            android:layout_width="wrap_content"
+            android:layout_width="150sp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:text="Título"
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/textAno"
-            android:layout_width="wrap_content"
+            android:layout_width="20sp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5sp"
             android:layout_marginLeft="5sp"
